--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>CV</title>
+</head>
+<body>
+    <header class="header">
+        <div class="container">
+         <nav id="menu">
+            <ul id="menu-nav">
+                <li><a href="">Personal</a></li>
+                <li><a href="">Contacts</a></li>
+                <li><a href="">Skills</a></li>
+                <li><a href="">Code</a></li> 
+                <li><a href="">English</a></li>
+                <li><a href="">Education</a></li>  
+            </ul>
+         </nav>
+    </div>
+    </header>
+</body>
+</html>
