feat: add about contacts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
          <nav id="menu">
             <ul id="menu-nav">
-                <li><a href="">Personal</a></li>
+                <li><a href="#personalInf">About me</a></li>
                 <li><a href="">Contacts</a></li>
                 <li><a href="">Skills</a></li>
                 <li><a href="">Code</a></li> 
@@ -22,5 +22,24 @@
          </nav>
     </div>
     </header>
+    <main class="main">
+        <img src="./photo.jpg" alt="Photo Andrey Irzun">
+        <h1 id="nameId">Andrey Irzun</h1>
+        <div id="personalInf">ABOUT ME:</div>
+                <ul id="personalId">
+                <li><h2>Date of birth: 27/01/1992</h2></li>
+                <li><h2>Location: Molodechno</h2></li>
+            </ul>
+         <div id="textAboutMe">I live in the city of Molodechno. I am able to work with a large amount of information, take a responsible approach to each case and learn quickly enough. I pay close attention to details. Ready to complete any task assigned to me.</div>
+         <div id="contacts">CONTACTS INFORMATION:</div>
+            <ul class="ico">
+                <li id="idIcon"><img id="icosvg" src="./ico/discord.png" alt="discordIco"><a href="http://discord.com">mejey#3978</a></li>
+                <li id="idIcon"><img id="icosvg" src="./ico/telegram.svg" alt="telegramIco"><a href="https://t.me/mejey1">mejey1</a></li>
+                <li id="idIcon"><img id="icosvg" src="./ico/phone.svg" alt="phoneIco"><a href="tel:+375297842211">+375297842211</a></li>
+                <li id="idIcon"><img id="icosvg" src="./ico/email.png" alt="emailIco"><a href="mailto:mejey1@gmail.com">mejey1@gmail.com</a></li>
+                <li id="idIcon"><img id="icosvg" src="./ico/github.png" alt="github"><a href="https://github.com/mejey1">mejey1</a></li>
+            </ul>
+         </div>
+    </main>
 </body>
 </html>
