feat: add skills

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
          <nav id="menu">
             <ul id="menu-nav">
                 <li><a href="#personalInf">About me</a></li>
-                <li><a href="">Contacts</a></li>
-                <li><a href="">Skills</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="">Code</a></li> 
                 <li><a href="">English</a></li>
                 <li><a href="">Education</a></li>  
@@ -39,7 +39,15 @@
                 <li id="idIcon"><img id="icosvg" src="./ico/email.png" alt="emailIco"><a href="mailto:mejey1@gmail.com">mejey1@gmail.com</a></li>
                 <li id="idIcon"><img id="icosvg" src="./ico/github.png" alt="github"><a href="https://github.com/mejey1">mejey1</a></li>
             </ul>
-         </div>
+          <div id="skills">SKILLS:</div>
+          <ul class="skillLevel">
+            <li><h2>HTML  +++</h2></li>
+            <li><h2>CSS  +++</h2></li>
+            <li><h2>JS +</h2></li>
+            <li><h2>VSCode +</h2></li>
+            <li><h2>GIT ++</h2></li>
+        </ul>
+        
     </main>
 </body>
 </html>
