--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <li><a href="#personalInf">About me</a></li>
                 <li><a href="#contacts">Contacts</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="">Code</a></li> 
+                <li><a href="#code">Code</a></li>
+                <li><a href="#experience">Experience</a></li>  
                 <li><a href="">English</a></li>
                 <li><a href="">Education</a></li>  
             </ul>
@@ -47,7 +48,22 @@
             <li><h2>VSCode +</h2></li>
             <li><h2>GIT ++</h2></li>
         </ul>
-        
+        <div id="code">CODE EXAMPLES:</div>
+        <div id="codetext">
+            <code>let x = 3;<br>
+            function fn() {<br>
+                x = 10;<br>
+                return;<br>
+                function x() {}<br>
+            }<br>
+            <br>
+            fn();<br>
+            console.log(x);</code>
+        </div>
+        <div id="experience">EXPERIENCE:</div>
+        <div id="experiencelink">
+        <a href="https://mejey1.github.io/rsschool-cv/">CV Project</a>
+        </div>
     </main>
 </body>
 </html>
