feat: add english education

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#code">Code</a></li>
                 <li><a href="#experience">Experience</a></li>  
-                <li><a href="">English</a></li>
+                <li><a href="#english">English</a></li>
                 <li><a href="">Education</a></li>  
             </ul>
          </nav>
@@ -63,6 +63,16 @@
         <div id="experience">EXPERIENCE:</div>
         <div id="experiencelink">
         <a href="https://mejey1.github.io/rsschool-cv/">CV Project</a>
+        </div>
+        <div id="english">ENGLISH LEVEL:</div>
+        <div id="enText">
+            <p>My English level is now - A1.</p>
+            <p>I am currently study at Duolinguo to improve my language skills.</p>
+        </div>
+        <div id="education">EDUCATION:</div>
+        <div id="educationText">
+            <p>2016 BSUIR</p>
+            <p>2012 TK GRSU</p>
         </div>
     </main>
 </body>
