feat: add footer

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
          <div id="textAboutMe">I live in the city of Molodechno. I am able to work with a large amount of information, take a responsible approach to each case and learn quickly enough. I pay close attention to details. Ready to complete any task assigned to me.</div>
          <div id="contacts">CONTACTS INFORMATION:</div>
             <ul class="ico">
-                <li id="idIcon"><img id="icosvg" src="./ico/discord.png" alt="discordIco"><a href="http://discord.com">mejey#3978</a></li>
-                <li id="idIcon"><img id="icosvg" src="./ico/telegram.svg" alt="telegramIco"><a href="https://t.me/mejey1">mejey1</a></li>
-                <li id="idIcon"><img id="icosvg" src="./ico/phone.svg" alt="phoneIco"><a href="tel:+375297842211">+375297842211</a></li>
-                <li id="idIcon"><img id="icosvg" src="./ico/email.png" alt="emailIco"><a href="mailto:mejey1@gmail.com">mejey1@gmail.com</a></li>
-                <li id="idIcon"><img id="icosvg" src="./ico/github.png" alt="github"><a href="https://github.com/mejey1">mejey1</a></li>
+                <li class="idIcon"><img class="icosvg" src="./ico/discord.png" alt="discordIco"><a href="http://discord.com">mejey#3978</a></li>
+                <li class="idIcon"><img class="icosvg" src="./ico/telegram.svg" alt="telegramIco"><a href="https://t.me/mejey1">mejey1</a></li>
+                <li class="idIcon"><img class="icosvg" src="./ico/phone.svg" alt="phoneIco"><a href="tel:+375297842211">+375297842211</a></li>
+                <li class="idIcon"><img class="icosvg" src="./ico/email.png" alt="emailIco"><a href="mailto:mejey1@gmail.com">mejey1@gmail.com</a></li>
+                <li class="idIcon"><img class="icosvg" src="./ico/github.png" alt="github"><a href="https://github.com/mejey1">mejey1</a></li>
             </ul>
           <div id="skills">SKILLS:</div>
           <ul class="skillLevel">
@@ -72,8 +72,11 @@
         <div id="education">EDUCATION:</div>
         <div id="educationText">
             <p>2016 BSUIR</p>
-            <p>2012 TK GRSU</p>
+            <p>2012 TC GRSU</p>
         </div>
-    </main>
-</body>
-</html>
+    </main> 
+    <footer id="footer"> 
+        <a href="https://github.com/mejey1"><img src="./ico/github.png" alt="github mejey1"></a>
+        <p>2022 Irzun Andrey</p>
+        <a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="rsshool"></a> </footer>
+            </html>
