--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#code">Code</a></li>
                 <li><a href="#experience">Experience</a></li>  
                 <li><a href="#english">English</a></li>
-                <li><a href="">Education</a></li>  
+                <li><a href="#education">Education</a></li>  
             </ul>
          </nav>
     </div>
