fix: formatting html ver1.1

--- a/index.html
+++ b/index.html
@@ -103,5 +103,6 @@
         <p>2022 Irzun Andrey</p>
         <a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="rsshool"></a>
     </footer>
+</body>
 
 </html>
